--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,7 +8,8 @@
     "port":"3307",
     "define": {
     "freezeTableName": true
-  }
+  },
+    "logging":false 
   },
   "test": {
     "username": "root",
